# demo_rust_chatting

./: .prettierrc.json  Cargo.toml  LICENSE  readme.md
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
